--- a/templates/timesheet/index.html
+++ b/templates/timesheet/index.html
@@ -12,7 +12,7 @@
             <li class="breadcrumb-item active" aria-current="page">Timesheet</li>
         </ol>
         {% if g.user %}
-        <span class="text-muted pr-2">{{ g.user.EmpName.title() }}</span>
+        <span class="text-muted pr-2 text-right">{{ g.user.EmpName.title() }}</span>
         {% endif %}
     </div>
 </nav>
